first implementation of API endpoints
