# handlers/cities/{cityId}/businesses.js
@@ -1,17 +1,23 @@
 'use strict';
-
+var data = require('../../../data/data.json');
+var businesses = [];
 /**
  * Operations on /cities/{cityId}/businesses
  */
 module.exports = {
-    
     /**
      * List all the businesses for a given a city
      * parameters: cityId
-     * produces: 
+     * produces:
      */
     get: function (req, res) {
-        res.status(200).json({Businesses: 'Businesses'});
+        for (var key in data) {
+            if (data.hasOwnProperty(key)) {
+                if (data[key].city === req.params.cityId) {
+                    return res.status(200).send(data[key].businesses);
+                }
+            }
+        }
+        return res.sendStatus(204);
     }
-    
 };
